# code-tabs

./: .gitignore  .proofs  .worktree-deps  CLAUDE.md  FEATURES.md  README.md  focus_and_screenshot.ps1  focus_app.ps1  index.html  node_modules  package-lock.json  package.json  send_key.ps1  take_screenshot.ps1
.claude/: settings.json  settings.local.json
.claude/agents/: builder.md  code-reviewer.md  code-simplifier.md  critic-abstraction.md  critic-reuse.md  critic-risk.md  dep-checker.md  greeter.md  plan-critic.md  prover.md  qa.md  reviewer.md  test-runner.md  todo-finder.md
.claude/commands/: changelog.md
.claude/hooks/: suggest-agents.sh
.claude/proposals/: refactor-progress.md
.claude/proposals/fixed/: F10.md  F4.md  F5.md  F9.md  R1.md  R2.md  R3.md
.claude/rules/: .proofd-manifest.json  activity-panel.md  activity-store-semantics.md  background-buffering.md  bashfileparser.md  command-bar.md  config-editors.md  config-impl.md  config-layout.md  config-manager.md  config-schema.md  data-flow.md  dead-session.md  debug-panel.md  dev-rules.md  discover-audit-binary.md  discovery-module.md  git-diff-panel.md  git-status.md  hooks-manager.md  inspector-connection.md  inspector-hooks.md  inspector-tap-pipeline.md  inspector.md  keyboard-shortcuts.md  modal-overlay.md  package-json-7030d0b2.md  persistence.md  philosophy.md  project-conventions.md  project-structure.md  proofd-pipeline.md  provider-routing.md  pty-internals.md  pty-output.md  pty-spawn.md  repo-hooks.md  respawn-resume.md  rightpanel.md  rust-command-modules.md  (+159 more)
.claude/skills/claude-tabs-debugging/: SKILL.md
.github/workflows/: build-linux.yml  build-windows.yml  discovery-audit.yml
.proofs/: config.json  prove-architecture.json  prove-background-buffering.json  prove-claude.json  prove-command-bar.json  prove-config-impl.json  prove-config-manager.json  prove-data-flow.json  prove-dead-session.json  prove-debug-panel.json  prove-features.json  prove-git-diff-panel.json  prove-hooks-manager.json  prove-inspector.json  prove-keyboard-shortcuts.json  prove-modal-overlay.json  prove-persistence.json  prove-philosophy.json  prove-pty-internals.json  prove-respawn-resume.json  prove-rust-commands.json  prove-session-launcher.json  prove-session-resume.json  prove-session-switch.json  prove-state-inspection.json  prove-tab-bar.json  prove-terminal.json  prove-window.json  runs.jsonl
DOCS/: ARCHITECTURE.md  FEATURES.md  PHILOSOPHY.md  PROOFD.md  RELEASE.md  TAP-SIGNALS.md  TESTING.md  parity-audit.md
investigation_logs/bun_inspect/: skilluse.jsonl  skilluse_chatlog.txt  subagent_missing_chatlog.txt
scripts/: migrate-to-rules.py  session-end-check.sh  test-revive-monitor.cjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pty-patch/: Cargo.toml  build.rs  target
src-tauri/pty-patch/permissions/: default.toml
src-tauri/pty-patch/permissions/autogenerated/: reference.md
src-tauri/pty-patch/permissions/autogenerated/commands/: drain_output.toml  get_child_pid.toml
src-tauri/pty-patch/permissions/schemas/: schema.json
src-tauri/pty-patch/src/: lib.rs  output_filter.rs  sync_detector.rs
src-tauri/src/: commands.rs  file_watcher.rs  haiku_proc.rs  jsonl_watcher.rs  lib.rs  metrics.rs  observability.rs  output_filter.rs  path_utils.rs  port.rs  proxy.rs  tap_server.rs
src-tauri/src/cli_adapter/: claude.rs  codex.rs  mod.rs
src-tauri/src/commands/: cli.rs  codex_cli.rs  config.rs  data.rs  file_ops.rs  file_watcher.rs  git.rs  mod.rs  path_resolve.rs  process.rs  session.rs  version.rs
src-tauri/src/discovery/: claude.rs  codex.rs  mod.rs
src-tauri/src/observability/: codex_rollout.rs  mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/proxy/codex/: auth.rs  mod.rs  response_shape.rs  stream.rs  translate_req.rs  translate_resp.rs  types.rs
src-tauri/src/pty/: conpty.rs  mod.rs  unix.rs
src-tauri/src/session/: mod.rs  persistence.rs  types.rs
src-tauri/src/tracer/: event.rs  linux.rs  mod.rs
src-tauri/src/weather/: mod.rs
src-tauri/tests/: codex_schema_extract.rs
src-tauri/tests/fixtures/: commands.html  env-vars.html  settings.html
src/components/ActivityFeed/: ActivityFeed.css  ActivityFeed.tsx
src/components/ActivityPanel/: ActivityPanel.css  ActivityPanel.tsx  AgentMascot.tsx  ClaudeMascot.tsx
src/components/AppHeader/: AppHeader.css  AppHeader.tsx
src/components/ChangelogModal/: ChangelogModal.tsx
src/components/CommandBar/: CommandBar.css  (+1 more)
src/hooks/: tapCodexNaming.ts  terminalShared.ts  useClaudeState.ts  useCliWatcher.ts  useCommandDiscovery.ts  useCtrlKey.ts  useExpandableSet.ts  useFileWatcher.ts  useGitStatus.ts  useInspectorConnection.ts  useInspectorState.ts  useKeyboardShortcuts.ts  useLocalStorageBoolean.ts  useMetaAgent.ts  useNativeChrome.ts  useNotifications.ts  useProcessMetrics.ts  usePty.ts  useSubagentWatcher.ts  useTapEventProcessor.ts  useTapPipeline.ts  useTapRecorder.ts  useTerminal.ts  useTerminalControls.ts  useTerminalEventHandlers.ts  useTerminalWriteSink.ts  useXtermLifecycle.ts
src/lib/: apiEndpoint.ts  bashFileParser.ts  claude.ts  claudeResume.ts  cliDisplay.ts  codexNaming.ts  codexSchema.ts  contextMeterAccumulator.ts  contextProjection.ts  debugLog.ts  diffParser.ts  domEdit.ts  fileTree.ts  formatMetrics.ts  globalHooks.ts  heat.ts  inputAccumulator.ts  inspectorHooks.ts  inspectorPort.ts  jsonlState.ts  modelCatalog.ts  modelRegistry.ts  noisyEventKinds.ts  paths.ts  perfTelemetry.ts  perfTrace.ts  promptDiff.ts  ptyProcess.ts  ptyRegistry.ts  quickLaunch.ts  replayParser.ts  searchBuffers.ts  sessionFork.ts  sessionLauncherConfig.ts  sessionRelaunch.ts  settingsSchema.ts  settledState.ts  stabilizer.ts  tabColors.ts  tapCatalog.ts  (+15 more)
src/store/: activity.ts  runtime.ts  sessions.ts  settings.ts  version.ts  weather.ts
src/types/: activity.ts  contextMeter.ts  eventKinds.json  git.ts  ipc.ts  session.ts  tapEvents.ts
tools/: codex_delegate.py  codex_handoff.py  proofd.py  setup_repo.py
(+143 files in other folders)
