[package]
name = "claude-tabs"
version = "0.56.1"
edition = "2021"
default-run = "claude-tabs"

[lib]
name = "claude_tabs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Standalone discovery audit binary. See src/bin/discover_audit.rs.
# Runs the same discovery::* functions the app uses, optionally diffing
# against docs.claude.com to catch drift (missing settings/commands/env-vars).
[[bin]]
name = "discover_audit"
path = "src/bin/discover_audit.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util", "process"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
log = "0.4"
open = { version = "5", features = ["shellexecute-on-windows"] }
reqwest = { version = "0.12", features = ["blocking", "stream", "socks", "json"] }
glob-match = "0.2"
flate2 = "1"
notify = "7"
ignore = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
futures-util = "0.3"
similar = "2"
scraper = "0.23"
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux notifications use notify-rust directly (not tauri_plugin_notification)
# so we can wire click actions to emit notification-clicked, matching the
# Windows tauri-winrt-notification path.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
] }

[profile.dev]
incremental = true
opt-level = 1

[profile.release]
incremental = true
lto = "thin"
strip = true
panic = "abort"
