[package]
name = "code-tabs"
version = "0.64.12"
edition = "2021"
default-run = "code-tabs"

[lib]
name = "code_tabs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Standalone discovery audit binary. See src/bin/discover_audit.rs.
# Runs the same discovery::* functions the app uses, optionally diffing
# against docs.claude.com to catch drift (missing settings/commands/env-vars).
[[bin]]
name = "discover_audit"
path = "src/bin/discover_audit.rs"

# Tauri's `custom-protocol` feature selects whether the WebView loads
# from the bundled `frontendDist` (production, via tauri://localhost)
# or from `devUrl` (http://localhost:1420 — Vite dev server). Tauri's
# CLI sets this feature automatically for `tauri build`, and explicitly
# drops it for `tauri dev` via --no-default-features. But when someone
# runs `cargo build` / `cargo test` directly (which happens whenever
# integration tests compile), the feature is absent and the binary
# comes out in dev mode — if Vite isn't running, the window shows
# "Connection refused". Making it a default feature here means every
# cargo-direct build produces a standalone prod-mode binary. Tauri's
# CLI still overrides correctly because `tauri dev` passes
# --no-default-features.
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util", "process"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# Cross-platform filesystem-event watcher used to tail Codex's rollout JSONL.
notify = "6"
dirs = "6"
regex = "1"
semver = "1"
shlex = "1"
wait-timeout = "0.2"
log = "0.4"
open = { version = "5", features = ["shellexecute-on-windows"] }
reqwest = { version = "0.12", features = ["blocking", "stream", "socks", "json"] }
glob-match = "0.2"
flate2 = "1"
# .tar archive support for the Port-content pane backup tarballs.
tar = "0.4"
# TOML parser for .codex/config.toml ↔ .claude/settings.json round-trips.
toml = "0.8"
# Format-preserving TOML editor — keeps comments and key order across
# click-to-insert edits in the Codex Settings pane (see commands::config
# `insert_codex_toml_key` / `insert_codex_toml_array_entry`).
toml_edit = "0.22"
# SIMD-accelerated substring search. Used to scan the Codex native binary for
# slash-command probe strings without paying O(n*m) on a ~200MB file.
memchr = "2"
ignore = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
futures-util = "0.3"
similar = "2"
scraper = "0.23"
tauri-plugin-clipboard-manager = "2.3.2"
# Cross-platform CPU/memory polling for the per-tab status bar metrics.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux notifications use notify-rust directly (not tauri_plugin_notification)
# so we can wire click actions to emit notification-clicked, matching the
# Windows tauri-winrt-notification path.
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem",
] }

[profile.dev]
incremental = true
opt-level = 1

[profile.release]
incremental = true
lto = "thin"
strip = true
panic = "abort"
