[package]
name = "tauri-plugin-pty"
version = "0.2.1"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-pty"

[lib]
name = "tauri_plugin_pty"
path = "src/lib.rs"

[dependencies]
portable-pty = { version = "0.9.0", features = ["serde_support"] }
memchr = "2"
serde = "1.0"
serde_json = "1.0"
tauri = "^2"

[build-dependencies]
tauri-plugin = { version = "^2", features = ["build"] }
